Alot and stopped slacking